--- a/FVE/src/main/resources/application.yml
+++ b/FVE/src/main/resources/application.yml
@@ -17,3 +17,7 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: ASSIGN_ID
+      logging:
+        level:
+          com.itheima.fve.fve.filter: DEBUG
+          com.itheima.fve.fve.common: DEBUG
