--- a/FVE/src/main/resources/application.yml
+++ b/FVE/src/main/resources/application.yml
@@ -9,6 +9,22 @@ spring:
       url: jdbc:mysql://localhost:3306/fve?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
       password: xxxxxx
+      http:
+        encoding:
+          charset: UTF-8
+          enabled: true
+          force: true
+      server:
+        servlet:
+          encoding:
+            charset: UTF-8
+            enabled: true
+            force: true
+  servlet:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 2MB
+
 
 mybatis-plus:
   configuration:
@@ -21,3 +37,5 @@ mybatis-plus:
         level:
           com.itheima.fve.fve.filter: DEBUG
           com.itheima.fve.fve.common: DEBUG
+fve:
+  path: D:\mavenproject\img\
